# pyfund

./: README.md  pyproject.toml  requirements.txt  test_debug.txt  test_output.txt
.github/workflows/: release.yml
cache/price_data/: SPY_133146708735736.pkl  yf_AAPL_1d_1mo__.pklz  yf_AAPL_1d_1y__.pklz  yf_AAPL_1d_2d__.pklz  yf_MSFT_1d_1mo__.pklz
docs/: conf.py
mlruns/0/: meta.yaml
mlruns/772313650434829078/: meta.yaml
mlruns/models/pyfundlib_models/: meta.yaml
scripts/: demo_v2026.py
src/pyfund/: __init__.py  cli.py  config.py
src/pyfund/automation/: runner.py  scheduler.py
src/pyfund/backtester/: auto_report.py  engine.py
src/pyfund/brokers/: alpaca.py  zerodha.py
src/pyfund/core/: broker.py  broker_registry.py
src/pyfund/data/: __init__.py  features.py  fetcher.py  processor.py  storage.py
src/pyfund/econometrics/: core.py
src/pyfund/execution/: live.py
src/pyfund/indicators/: __init__.py  macd.py  rsi.py  sma.py
src/pyfund/ml/: predictor.py  tracking.py  versioning.py
src/pyfund/portfolio/: allocator.py
src/pyfund/reporting/: perf_report.py
src/pyfund/risk/: __init__.py  constraints.py
src/pyfund/simulation/: __init__.py  core.py  gbm.py
src/pyfund/strategies/: __init__.py  arima_garch_reversion.py  base.py  delta_hedged_straddle.py  donchian_breakout.py  earnings_drift.py  hft_micro_reversion.py  market_making.py  ml_random_forest.py  pairs_trading.py  risk_parity.py  rsi_mean_reversion.py  sma_crossover.py  (+2 more)
src/pyfundlib/: config.py
tests/: test_data.py  test_data_baseline.py  x.py
tests/test_ml/: test_models.py
(+87 files in other folders)
