[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfund"
version = "0.1.0"
description = "End-to-End Python Toolkit for Algo Trading: Strategies, ML Predictions, and Automated Funds"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "xgboost>=1.7.0",
    "mlflow>=2.0.0",
    "apscheduler>=3.10.0",
    "yfinance>=0.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
    "sphinx",
    "jupyter",
    "mlflow[ui]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfund"]